--- a/basic/basic-layout-1.html
+++ b/basic/basic-layout-1.html
@@ -6,10 +6,22 @@
     <title>Basic Layout 1</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      body {
+    
+    body {
         display: grid;
+        grid-template-columns:1fr 3fr;
+        grid-template-rows: 0.5fr 3fr 0.3fr;
+        gap: 1em;
       }
-      /* Doe hier jouw ding! */
+      body header{
+        grid-column-start: 1;
+        grid-column-end: -1;
+      }
+      body footer{
+        grid-column-start: 1;
+        grid-column-end: -1;
+      }
+    
     </style>
   </head>
   <body id="basic-layout-1">
