--- a/basic/basic-layout-2.html
+++ b/basic/basic-layout-2.html
@@ -6,7 +6,13 @@
     <title>Basic Layout 2</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+  
+  body {
+        display: grid;
+        grid-template-rows:1fr 0.5fr 4fr 0.7fr;
+        gap: 1em;
+      }
+
     </style>
   </head>
   <body id="basic-layout-2">
