--- a/basic/basic-layout-4.html
+++ b/basic/basic-layout-4.html
@@ -6,7 +6,26 @@
     <title>Basic Layout 4</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+    body {
+        display: grid;
+        grid-template-columns: 4fr 1fr; 
+        gap: 1em;
+      }
+      header, .cyan {
+        order: 2;
+      }
+      nav, .magenta {
+        order: 4;
+      }
+      main, .yellow{
+        order: 1;
+      }
+      footer, .black {
+        order: 3;
+      }
+
+
+
     </style>
   </head>
   <body id="basic-layout-4">
